--- a/form-validation.css
+++ b/form-validation.css
@@ -1,8 +1,12 @@
-.invalid{
+/*.invalid{
     border: 1px solid red;
     background-color: #ffdddd;
-}
+}*/
 
 input:invalid {
     border: 1px solid red;
+}
+
+input:valid {
+    border: 1px solid green;
 }
