prevent submit default and added invalid class

--- a/form-validation.css
+++ b/form-validation.css
@@ -1,7 +1,7 @@
-/*.invalid{
+.invalid{
     border: 1px solid red;
     background-color: #ffdddd;
-}*/
+}
 
 input:invalid {
     border: 1px solid red;
